--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,11 +12,13 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# Logging info
+# Logging
 logging.file.path=.
 logging.file.name=${application.name}.log
 logging.level.com.sohan=DEBUG
 
-# Zipkin info
+# Zipkin
 spring.zipkin.base-url=http://localhost:9411/
+spring.zipkin.service.name: address-service
+
 spring.sleuth.sampler.probability=1
