--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Spring Application Details
-application.name=distributed-tracing-sleuth-zipkin-address
-server.port=8081
+application.name=distributed-tracing-sleuth-zipkin-user
+server.port=8082
 
 # Enabling H2 Console
 spring.h2.console.enabled=true
@@ -19,6 +19,6 @@ logging.level.com.sohan=DEBUG
 
 # Zipkin
 spring.zipkin.base-url=http://localhost:9411/
-spring.zipkin.service.name: address-service
+spring.zipkin.service.name: user-service
 
 spring.sleuth.sampler.probability=1
