Add ResposeEntity to getUser.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,8 @@ logging.file.path=.
 logging.file.name=${application.name}.log
 logging.level.com.sohan=DEBUG
 
-# Zipkin
+# Send 100% of the request traces to Stackdriver.
+spring.sleuth.sampler.probability=1
+
 spring.zipkin.base-url=http://localhost:9411/
 spring.zipkin.service.name: user-service
-
-spring.sleuth.sampler.probability=1
